Bug 373464, Shutdown crash [@ nsContentUtils::DropScriptObject]. r+sr=peterv.