content/base/public/nsContentUtils.h
@@ -968,7 +968,8 @@ public:
     }
     ~ScriptObjectHolder()
     {
-      DropScriptObject(mLangID, mObject);
+      if (mObject)
+        DropScriptObject(mLangID, mObject);
     }
     nsresult set(void *aObject)
     {
